<resources>
    <string name="app_name">Inventory Manager</string>
    <string name="empty_text_view">No products found. \n\n Click \(+\) to a Add Product!</string>
    <string name="button_sale">Sale</string>
    <string name="add_button">Add</string>
    <string name="delete_button">Delete</string>
    <string name="name_field">Product Name:</string>
    <string name="name_hint">Enter Product Name Here</string>
    <string name="quantity_field">Quantity Available:</string>
    <string name="quantity_zero">0</string>
    <string name="button_increase_one">+</string>
    <string name="button_decrease_one">-</string>
    <string name="intervals">By Intervals Of:</string>
    <string name="quantity_ten">10</string>
    <string name="price_field">Unit Price:</string>
    <string name="price_hint">25.50</string>
    <string name="button_order_supplier">Order From Supplier</string>
    <string name="delete_all">Delete All</string>
    <string name="insert_test">Insert Test Data</string>
    <string name="no_info">No Product Information Found</string>
    <string name="toast_product_out_stock">Out Of Stock</string>
    <string name="toast_delete_product_failed">Error Deleting Products</string>
    <string name="toast_delete_product_success">Product Deleted</string>
    <string name="activity_detail_edit">Edit Product</string>
    <string name="activity_detail_new">Add Product</string>
    <string name="supplier_email">my_dear@best_supplier.com</string>
    <string name="toast_invalid_quantity">Invalid Quantity</string>
    <string name="toast_missing_quantity">Fill in the quantity before continuing</string>
    <string name="toast_insert_or_update_product_failed">Failed to Insert/Update Product Info</string>
    <string name="toast_invalid_name_add">Add a Product Name</string>
    <string name="toast_invalid_quantity_add">Product quantity cannot be 0</string>
    <string name="toast_invalid_price_add">Add a price</string>
    <string name="toast_invalid_image_add">Select a product image before continuing</string>
    <string name="toast_insert_product_success">Product saved</string>
    <string name="toast_update_product_success">Product updated</string>
    <string name="prompt_delete_product">Confirm delete</string>
    <string name="prompt_delete">Delete</string>
    <string name="prompt_cancel">Cancel</string>
    <string name="prompt_yes">Yes</string>
    <string name="prompt_leave_no_save">Leave without saving?</string>
    <string name="select_photo">Select Photo</string>
    <string name="photo_option">Select an image from phone or take new image</string>
    <string name="take_photo">Take Photo</string>
    <string name="increment_decrement">Intervals Of 1</string>
    <string name="error_making_item">Error saving product</string>
    <string name="item_saved">Product saved</string>
    <string name="update_error">Error updating product</string>
    <string name="update_successful">Product update successful</string>
    <string name="toast_fill_out_feilds">All Fields Must Be Filled Out</string>
    <string name="toast_take_photo">No photo found. Click on the camera image to take a photo.</string>

</resources>
