<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/small_margin"
    android:background="@color/background"
    tools:context="com.example.android.inventorymanager.ProductDetailActivity">

    <Button
        android:id="@+id/button_order_from_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/padding"
        android:text="@string/button_order_supplier"
        android:background="@drawable/sale_button"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:fontFamily="serif"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/button_order_from_supplier"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_field"
            android:textSize="@dimen/medium_font_size"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/edit_text_name"
            android:maxLength="20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:textSize="@dimen/standard_font_size"
            android:textStyle="italic"
            android:textColorHint="@color/colorAccent"
            android:fontFamily="serif"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/quantity_field"
            android:textSize="@dimen/medium_font_size"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp">

            <TextView
                android:layout_width="@dimen/zero_layout_width_height"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/increment_decrement"
                android:textSize="@dimen/standard_font_size"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="serif"/>

            <View
                android:layout_margin="@dimen/small_margin"
                android:layout_height="@dimen/zero_layout_width_height"
                android:layout_width="@dimen/zero_layout_width_height"/>

            <TextView
                android:layout_width="@dimen/zero_layout_width_height"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/intervals"
                android:textSize="@dimen/standard_font_size"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="serif"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_decrease_one"
                android:layout_width="@dimen/increase_decrease_one_button_width"
                android:layout_height="@dimen/increase_decrease_one_button_height"
                android:layout_marginEnd="@dimen/padding"
                android:layout_marginRight="@dimen/padding"
                android:text="@string/button_decrease_one"
                android:textStyle="bold"
                android:background="@drawable/sale_button"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="@dimen/four" />


            <TextView
                android:id="@+id/text_view_quantity_final"
                android:layout_width="@dimen/zero_layout_width_height"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/quantity_zero"
                android:textSize="@dimen/standard_font_size"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/button_increase_one"
                android:layout_width="@dimen/increase_decrease_one_button_width"
                android:layout_height="@dimen/increase_decrease_one_button_height"
                android:text="@string/button_increase_one"
                android:background="@drawable/sale_button"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="@dimen/four" />

            <View
                android:layout_margin="@dimen/small_margin"
                android:layout_height="@dimen/zero_layout_width_height"
                android:layout_width="@dimen/zero_layout_width_height"/>

            <Button
                android:id="@+id/button_decrease_n"
                android:layout_width="@dimen/increase_decrease_one_button_width"
                android:layout_height="@dimen/increase_decrease_one_button_height"
                android:text="@string/button_decrease_one"
                android:textStyle="bold"
                android:background="@drawable/sale_button"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="@dimen/four"/>

            <EditText
                android:id="@+id/edit_text_quantity"
                android:maxLength="4"
                android:layout_width="@dimen/zero_layout_width_height"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/quantity_ten"
                android:gravity="center"
                android:layout_gravity="center"
                android:inputType="number"
                android:textSize="@dimen/standard_font_size"
                android:textColorHint="@color/colorAccent"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/button_increase_n"
                android:layout_width="@dimen/increase_decrease_one_button_width"
                android:layout_height="@dimen/increase_decrease_one_button_height"
                android:text="@string/button_increase_one"
                android:background="@drawable/sale_button"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="@dimen/four"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_field"
            android:layout_marginTop="@dimen/small_margin"
            android:textSize="@dimen/medium_font_size"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="serif" />

        <EditText
            android:id="@+id/edit_text_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_hint"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:textSize="@dimen/standard_font_size"
            android:textStyle="italic"
            android:textColorHint="@color/colorAccent"
            android:fontFamily="serif"/>

        <ImageView
            android:id="@+id/image"
            android:src="@drawable/image_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginBottom="@dimen/padding" />

    </LinearLayout>

</RelativeLayout>

